--- a/Mountain.csproj
+++ b/Mountain.csproj
@@ -52,6 +52,7 @@
     <Compile Include="classes\Exit.cs" />
     <Compile Include="classes\helpers\Linkage.cs" />
     <Compile Include="classes\helpers\Packet.cs" />
+    <Compile Include="classes\helpers\XmlHelper.cs" />
     <Compile Include="classes\Item.cs" />
     <Compile Include="classes\Mob.cs" />
     <Compile Include="classes\Room.cs" />
