--- a/Mountain.csproj
+++ b/Mountain.csproj
@@ -46,10 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="classes\AnsiColor.cs" />
     <Compile Include="classes\Area.cs" />
     <Compile Include="classes\BaseObject.cs" />
     <Compile Include="classes\Character.cs" />
     <Compile Include="classes\Exit.cs" />
+    <Compile Include="classes\helpers\Colors.cs" />
     <Compile Include="classes\helpers\Linkage.cs" />
     <Compile Include="classes\helpers\Packet.cs" />
     <Compile Include="classes\helpers\XmlHelper.cs" />
