--- a/App.config
+++ b/App.config
@@ -23,6 +23,9 @@
             <setting name="LastWorldSaved" serializeAs="String">
                 <value>""</value>
             </setting>
+            <setting name="Users" serializeAs="String">
+                <value>/configuration/users.xml</value>
+            </setting>
         </Mountain.Properties.Settings>
     </userSettings>
 </configuration>
