--- a/Mountain.csproj
+++ b/Mountain.csproj
@@ -49,6 +49,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Xml.Linq" />
@@ -81,6 +82,7 @@
     <Compile Include="classes\Items\WearableType.cs" />
     <Compile Include="classes\Items\WeaponType.cs" />
     <Compile Include="classes\ClientConnection.cs" />
+    <Compile Include="classes\helpers\appSettings.cs" />
     <Compile Include="classes\TcpServer.cs" />
     <Compile Include="classes\Underling.cs" />
     <Compile Include="classes\Exit.cs" />
@@ -103,6 +105,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings.cs" />
     <EmbeddedResource Include="AreaForm.resx">
       <DependentUpon>AreaForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -134,6 +137,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Configuration\Users.xml" />
     <Content Include="ToDo\firstMudIdeas.txt" />
     <Content Include="ToDo\Todo.txt" />
   </ItemGroup>
