--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="LastWorldSaved" Type="System.String" Scope="User">
       <Value Profile="(Default)">""</Value>
     </Setting>
+    <Setting Name="Users" Type="System.String" Scope="User">
+      <Value Profile="(Default)">/configuration/users.xml</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
