--- a/App.config
+++ b/App.config
@@ -4,9 +4,6 @@
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="Mountain.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="Mountain.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
@@ -16,16 +13,12 @@
             <setting name="Setting" serializeAs="String">
                 <value />
             </setting>
+            <setting name="UserFile" serializeAs="String">
+                <value>users.xml</value>
+            </setting>
+            <setting name="WorldDirectory" serializeAs="String">
+                <value>worlds</value>
+            </setting>
         </Mountain.Properties.Settings>
     </applicationSettings>
-    <userSettings>
-        <Mountain.Properties.Settings>
-            <setting name="LastWorldSaved" serializeAs="String">
-                <value>""</value>
-            </setting>
-            <setting name="Users" serializeAs="String">
-                <value>/configuration/users.xml</value>
-            </setting>
-        </Mountain.Properties.Settings>
-    </userSettings>
 </configuration>
