--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -5,11 +5,11 @@
     <Setting Name="Setting" Type="System.String" Scope="Application">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="LastWorldSaved" Type="System.String" Scope="User">
-      <Value Profile="(Default)">""</Value>
+    <Setting Name="UserFile" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">users.xml</Value>
     </Setting>
-    <Setting Name="Users" Type="System.String" Scope="User">
-      <Value Profile="(Default)">/configuration/users.xml</Value>
+    <Setting Name="WorldDirectory" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">worlds</Value>
     </Setting>
   </Settings>
 </SettingsFile>
