--- a/Mountain.csproj
+++ b/Mountain.csproj
@@ -75,6 +75,7 @@
     <Compile Include="classes\helpers\Functions.cs" />
     <Compile Include="classes\helpers\Globals.cs" />
     <Compile Include="classes\helpers\MessageQueue.cs" />
+    <Compile Include="classes\helpers\Players.cs" />
     <Compile Include="classes\helpers\RoomID.cs" />
     <Compile Include="classes\helpers\Users.cs" />
     <Compile Include="classes\Login.cs" />
@@ -105,7 +106,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Settings.cs" />
     <EmbeddedResource Include="AreaForm.resx">
       <DependentUpon>AreaForm.cs</DependentUpon>
     </EmbeddedResource>
