command verb initialization

--- a/Mountain.csproj
+++ b/Mountain.csproj
@@ -69,8 +69,11 @@
     <Compile Include="AreaForm.Designer.cs">
       <DependentUpon>AreaForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="classes\Administrator.cs" />
     <Compile Include="classes\Area.cs" />
     <Compile Include="classes\Equipment.cs" />
+    <Compile Include="classes\helpers\Account.cs" />
+    <Compile Include="classes\helpers\CommandList.cs" />
     <Compile Include="classes\helpers\EventQueue.cs" />
     <Compile Include="classes\helpers\FormInterface.cs" />
     <Compile Include="classes\helpers\Functions.cs" />
