--- a/App.config
+++ b/App.config
@@ -4,21 +4,49 @@
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="Mountain.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Mountain.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
     <applicationSettings>
         <Mountain.Properties.Settings>
-            <setting name="Setting" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="UserFile" serializeAs="String">
+            <setting name="RegisteredAccounts" serializeAs="String">
                 <value>users.xml</value>
             </setting>
             <setting name="WorldDirectory" serializeAs="String">
                 <value>worlds</value>
             </setting>
+            <setting name="TemplateDirectory" serializeAs="String">
+                <value>build/templates</value>
+            </setting>
+            <setting name="AreaDirectory" serializeAs="String">
+                <value>build/area</value>
+            </setting>
+            <setting name="RoomDirectory" serializeAs="String">
+                <value>build/room</value>
+            </setting>
+            <setting name="ExitDirectory" serializeAs="String">
+                <value>build/exit</value>
+            </setting>
+            <setting name="ItemDirectory" serializeAs="String">
+                <value>build/item</value>
+            </setting>
         </Mountain.Properties.Settings>
     </applicationSettings>
+    <userSettings>
+        <Mountain.Properties.Settings>
+            <setting name="LastSavedWorld" serializeAs="String">
+                <value>""</value>
+            </setting>
+            <setting name="LastLoadedWorld" serializeAs="String">
+                <value>""</value>
+            </setting>
+            <setting name="BuildDirectory" serializeAs="String">
+                <value>build</value>
+            </setting>
+        </Mountain.Properties.Settings>
+    </userSettings>
 </configuration>
