--- a/Mountain.csproj
+++ b/Mountain.csproj
@@ -81,6 +81,7 @@
     <Compile Include="classes\helpers\MessageQueue.cs" />
     <Compile Include="classes\helpers\Players.cs" />
     <Compile Include="classes\helpers\RoomID.cs" />
+    <Compile Include="classes\helpers\Rooms.cs" />
     <Compile Include="classes\helpers\Users.cs" />
     <Compile Include="classes\Login.cs" />
     <Compile Include="classes\Identity.cs" />
@@ -109,6 +110,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings.cs" />
     <EmbeddedResource Include="AreaForm.resx">
       <DependentUpon>AreaForm.cs</DependentUpon>
     </EmbeddedResource>
