build/template folder structure

--- a/App.config
+++ b/App.config
@@ -16,23 +16,44 @@
             <setting name="RegisteredAccounts" serializeAs="String">
                 <value>users.xml</value>
             </setting>
-            <setting name="WorldDirectory" serializeAs="String">
+            <setting name="WorldsDirectory" serializeAs="String">
                 <value>worlds</value>
             </setting>
             <setting name="TemplateDirectory" serializeAs="String">
-                <value>build/templates</value>
+                <value>templates</value>
             </setting>
-            <setting name="AreaDirectory" serializeAs="String">
+            <setting name="AreaBuildDirectory" serializeAs="String">
                 <value>build/area</value>
             </setting>
-            <setting name="RoomDirectory" serializeAs="String">
+            <setting name="RoomBuildDirectory" serializeAs="String">
                 <value>build/room</value>
             </setting>
-            <setting name="ExitDirectory" serializeAs="String">
+            <setting name="ExitBuildDirectory" serializeAs="String">
                 <value>build/exit</value>
             </setting>
-            <setting name="ItemDirectory" serializeAs="String">
+            <setting name="ItemBuildDirectory" serializeAs="String">
                 <value>build/item</value>
+            </setting>
+            <setting name="BuildDirectory" serializeAs="String">
+                <value>build</value>
+            </setting>
+            <setting name="WorldBuildDirectory" serializeAs="String">
+                <value>build/world</value>
+            </setting>
+            <setting name="WorldTemplateDirectory" serializeAs="String">
+                <value>templates/world</value>
+            </setting>
+            <setting name="AreaTemplateDirectory" serializeAs="String">
+                <value>templates/area</value>
+            </setting>
+            <setting name="RoomTemplateDirectory" serializeAs="String">
+                <value>templates/room</value>
+            </setting>
+            <setting name="ItemTemplateDirectory" serializeAs="String">
+                <value>templates/item</value>
+            </setting>
+            <setting name="ExitTemplateDirectory" serializeAs="String">
+                <value>templates/exit</value>
             </setting>
         </Mountain.Properties.Settings>
     </applicationSettings>
@@ -43,9 +64,6 @@
             </setting>
             <setting name="LastLoadedWorld" serializeAs="String">
                 <value>""</value>
-            </setting>
-            <setting name="BuildDirectory" serializeAs="String">
-                <value>build</value>
             </setting>
         </Mountain.Properties.Settings>
     </userSettings>
