--- a/Mountain.csproj
+++ b/Mountain.csproj
@@ -71,6 +71,7 @@
     </Compile>
     <Compile Include="classes\Area.cs" />
     <Compile Include="classes\Connection.cs" />
+    <Compile Include="classes\helpers\AdminHandler.cs" />
     <Compile Include="classes\helpers\Equipment.cs" />
     <Compile Include="classes\helpers\Account.cs" />
     <Compile Include="classes\helpers\Attribute.cs" />
@@ -95,8 +96,8 @@
     <Compile Include="classes\Items\WearableType.cs" />
     <Compile Include="classes\Items\WeaponType.cs" />
     <Compile Include="classes\ApplicationSettings.cs" />
-    <Compile Include="classes\TcpListenerEx.cs" />
-    <Compile Include="classes\TcpServer.cs" />
+    <Compile Include="classes\TcpListenerActive.cs" />
+    <Compile Include="classes\TcpServerListener.cs" />
     <Compile Include="classes\Mobs\Underling.cs" />
     <Compile Include="classes\Exit.cs" />
     <Compile Include="classes\Collections\Vault.cs" />
