--- a/Mountain.csproj
+++ b/Mountain.csproj
@@ -70,25 +70,25 @@
       <DependentUpon>AreaForm.cs</DependentUpon>
     </Compile>
     <Compile Include="classes\Area.cs" />
-    <Compile Include="classes\Connection.cs" />
-    <Compile Include="classes\helpers\AdminHandler.cs" />
-    <Compile Include="classes\helpers\Equipment.cs" />
-    <Compile Include="classes\helpers\Account.cs" />
-    <Compile Include="classes\helpers\Attribute.cs" />
-    <Compile Include="classes\helpers\Build.cs" />
-    <Compile Include="classes\helpers\Colors.cs" />
-    <Compile Include="classes\helpers\CommunicationCommand.cs" />
-    <Compile Include="classes\helpers\Dispatch.cs" />
+    <Compile Include="classes\Tcp\Connection.cs" />
+    <Compile Include="classes\Handlers\AdminHandler.cs" />
+    <Compile Include="classes\DataObjects\Equipment.cs" />
+    <Compile Include="classes\DataObjects\Account.cs" />
+    <Compile Include="classes\DataObjects\Attribute.cs" />
+    <Compile Include="classes\Handlers\Build.cs" />
+    <Compile Include="classes\DataObjects\Colors.cs" />
+    <Compile Include="classes\Handlers\CommunicationCommand.cs" />
+    <Compile Include="classes\Handlers\Dispatch.cs" />
     <Compile Include="classes\Collections\EventQueue.cs" />
-    <Compile Include="classes\helpers\Functions.cs" />
-    <Compile Include="classes\helpers\Globals.cs" />
-    <Compile Include="classes\helpers\LoginHandler.cs" />
+    <Compile Include="classes\Handlers\Extensions.cs" />
+    <Compile Include="classes\DataObjects\Globals.cs" />
+    <Compile Include="classes\Handlers\LoginHandler.cs" />
     <Compile Include="classes\Collections\MessageQueue.cs" />
-    <Compile Include="classes\helpers\Packet.cs" />
-    <Compile Include="classes\helpers\PlayerHandler.cs" />
-    <Compile Include="classes\helpers\RoomID.cs" />
-    <Compile Include="classes\helpers\Stats.cs" />
-    <Compile Include="classes\helpers\XmlHelper.cs" />
+    <Compile Include="classes\DataObjects\Packet.cs" />
+    <Compile Include="classes\Handlers\PlayerHandler.cs" />
+    <Compile Include="classes\DataObjects\RoomID.cs" />
+    <Compile Include="classes\DataObjects\Stats.cs" />
+    <Compile Include="classes\Handlers\XmlHelper.cs" />
     <Compile Include="classes\Collections\Players.cs" />
     <Compile Include="classes\Collections\Rooms.cs" />
     <Compile Include="classes\Collections\RegisteredUsers.cs" />
@@ -96,8 +96,8 @@
     <Compile Include="classes\Items\WearableType.cs" />
     <Compile Include="classes\Items\WeaponType.cs" />
     <Compile Include="classes\ApplicationSettings.cs" />
-    <Compile Include="classes\TcpListenerActive.cs" />
-    <Compile Include="classes\TcpServerListener.cs" />
+    <Compile Include="classes\Tcp\TcpListenerActive.cs" />
+    <Compile Include="classes\Tcp\TcpServerListener.cs" />
     <Compile Include="classes\Mobs\Underling.cs" />
     <Compile Include="classes\Exit.cs" />
     <Compile Include="classes\Collections\Vault.cs" />
