--- a/Mountain.csproj
+++ b/Mountain.csproj
@@ -72,6 +72,7 @@
     <Compile Include="classes\Area.cs" />
     <Compile Include="classes\Handlers\Combat.cs" />
     <Compile Include="classes\Handlers\Emote.cs" />
+    <Compile Include="classes\Handlers\PlayerCommands.cs" />
     <Compile Include="classes\Handlers\RoomCommands.cs" />
     <Compile Include="classes\Tcp\Connection.cs" />
     <Compile Include="classes\Handlers\AdminHandler.cs" />
@@ -115,12 +116,19 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoomEdit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RoomEdit.Designer.cs">
+      <DependentUpon>RoomEdit.cs</DependentUpon>
+    </Compile>
     <Compile Include="Settings.cs" />
     <EmbeddedResource Include="AreaForm.resx">
       <DependentUpon>AreaForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Mountain.resx">
       <DependentUpon>Mountain.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -132,6 +140,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="RoomEdit.resx">
+      <DependentUpon>RoomEdit.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\DataSources\Mountain.classes.Room.datasource" />
     <None Include="Properties\DataSources\Mountain.classes.World.datasource" />
     <None Include="Properties\Settings.settings">
