--- a/Mountain.csproj
+++ b/Mountain.csproj
@@ -72,7 +72,7 @@
     <Compile Include="classes\Area.cs" />
     <Compile Include="classes\Handlers\Combat.cs" />
     <Compile Include="classes\Handlers\Emote.cs" />
-    <Compile Include="classes\Handlers\Functions.cs" />
+    <Compile Include="classes\Functions\Functions.cs" />
     <Compile Include="classes\Handlers\PlayerCommands.cs" />
     <Compile Include="classes\Handlers\RoomCommands.cs" />
     <Compile Include="classes\Tcp\Connection.cs" />
@@ -80,11 +80,11 @@
     <Compile Include="classes\DataObjects\Equipment.cs" />
     <Compile Include="classes\DataObjects\Account.cs" />
     <Compile Include="classes\DataObjects\Attribute.cs" />
-    <Compile Include="classes\Handlers\Build.cs" />
+    <Compile Include="classes\Functions\Build.cs" />
     <Compile Include="classes\DataObjects\Colors.cs" />
     <Compile Include="classes\Handlers\Dispatch.cs" />
     <Compile Include="classes\Collections\EventQueue.cs" />
-    <Compile Include="classes\Handlers\Extensions.cs" />
+    <Compile Include="classes\Functions\Extensions.cs" />
     <Compile Include="classes\DataObjects\Globals.cs" />
     <Compile Include="classes\Handlers\LoginHandler.cs" />
     <Compile Include="classes\Collections\MessageQueue.cs" />
@@ -92,7 +92,7 @@
     <Compile Include="classes\Handlers\PlayerHandler.cs" />
     <Compile Include="classes\DataObjects\RoomID.cs" />
     <Compile Include="classes\DataObjects\Stats.cs" />
-    <Compile Include="classes\Handlers\XmlHelper.cs" />
+    <Compile Include="classes\Functions\XmlHelper.cs" />
     <Compile Include="classes\Collections\Players.cs" />
     <Compile Include="classes\Collections\Rooms.cs" />
     <Compile Include="classes\Collections\RegisteredUsers.cs" />
