Player: quit, xml-save, move to...

--- a/App.config
+++ b/App.config
@@ -55,6 +55,9 @@
             <setting name="ExitTemplateDirectory" serializeAs="String">
                 <value>templates/exit</value>
             </setting>
+            <setting name="PlayersDirectory" serializeAs="String">
+                <value>players</value>
+            </setting>
         </Mountain.Properties.Settings>
     </applicationSettings>
     <userSettings>
