--- a/Mountain.csproj
+++ b/Mountain.csproj
@@ -71,6 +71,7 @@
     </Compile>
     <Compile Include="classes\Area.cs" />
     <Compile Include="classes\Collections\SystemEventQueue.cs" />
+    <Compile Include="classes\DataObjects\Factory.cs" />
     <Compile Include="classes\DataObjects\StringResources.cs" />
     <Compile Include="classes\Handlers\Combat.cs" />
     <Compile Include="classes\Handlers\Emote.cs" />
@@ -88,10 +89,10 @@
     <Compile Include="classes\Collections\EventQueue.cs" />
     <Compile Include="classes\Functions\Extensions.cs" />
     <Compile Include="classes\DataObjects\Globals.cs" />
-    <Compile Include="classes\Handlers\LoginHandler.cs" />
+    <Compile Include="classes\Handlers\LoginDispatcher.cs" />
     <Compile Include="classes\Collections\MessageQueue.cs" />
     <Compile Include="classes\DataObjects\Packet.cs" />
-    <Compile Include="classes\Handlers\PlayerHandler.cs" />
+    <Compile Include="classes\Handlers\PlayerDispatcher.cs" />
     <Compile Include="classes\DataObjects\RoomID.cs" />
     <Compile Include="classes\DataObjects\Stats.cs" />
     <Compile Include="classes\Functions\XmlHelper.cs" />
